# pymds

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg  version.py
docs/: Makefile
docs/source/: conf.py  distance-matrix-example.py  index.rst  mds.rst  orient-plot-example.py
pymds/: __init__.py  mds.py
test/: test-antigenic.py  test-mds.py
test/data/: 10x10-distance-matrix.csv
