[metadata]
author = David Pattinson
author_email = djp65@cam.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Metric multidimensional scaling in python.
download_url = https://github.com/acorg/pymds/releases/latest
keywords = python, mds, antigenic cartography
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = David Pattinson
maintainer_email = djp65@cam.ac.uk
name = pymds
platforms =
    MacOS
url = https://github.com/acorg/pymds
version = attr: pymds.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
