[metadata]
author = David Pattinson
author_email = djp65@cam.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Metric multidimensional scaling in python.
download_url = https://github.com/acorg/pymds/releases/latest
keywords = python, mds, antigenic cartography
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = David Pattinson
maintainer_email = djp65@cam.ac.uk
name = pymds
platforms =
    MacOS
url = https://github.com/acorg/pymds
version = attr: pymds.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    cycler>=0.10.0
    dill>=0.2.8.2
    kiwisolver>=1.0.1
    matplotlib>=2.2.2
    multiprocess>=0.70.6.1
    numpy>=1.14.5
    pandas>=0.23.1
    pathos>=0.2.2
    pox>=0.2.4
    ppft>=1.6.4.8
    pyparsing>=2.2.0
    python-dateutil>=2.7.3
    pytz>=2018.5
    scipy>=1.1.0
    six>=1.11.0
